syntax = "proto3";

import "google/protobuf/timestamp.proto";

package position;

option go_package = "github.com/javascriptizer1/tm-player.backend/pkg/gengrpc";


service PositionService {
    rpc CreatePosition(CreatePositionRequest) returns (CreatePositionResponse);
    rpc UpdatePosition(UpdatePositionRequest) returns (UpdatePositionResponse);
    rpc GetPosition(GetPositionRequest) returns (GetPositionResponse);
    rpc GetListPositions(GetListPositionsRequest) returns (GetListPositionsResponse);
}

message Position {
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message CreatePositionRequest {
    string name = 1;
}

message CreatePositionResponse {
    string id = 1;
}

message UpdatePositionRequest {
    string id = 1;
    string name = 2;
}

message UpdatePositionResponse {
    string id = 1;
}

message GetPositionRequest {
    string id = 1;
}

message GetPositionResponse {
    Position position = 1;
}

message GetListPositionsRequest {
    int64 limit = 1;
    int64 page = 2;
    repeated string ids = 3;
}

message GetListPositionsResponse {
    repeated Position positions = 1;
    int64 total = 2;
}
